--- a/service/views/login.ejs
+++ b/service/views/login.ejs
@@ -10,14 +10,14 @@
             rel="preload"
             as="font"
             type="font/woff2"
-            href="/font/BDO-Grotesk/BDOGrotesk-VF.woff2"
+            href="/api/font/BDO-Grotesk/BDOGrotesk-VF.woff2"
             crossOrigin=""
         />
-        <link rel="stylesheet" type="text/css" href="/style/global.css" />
+        <link rel="stylesheet" type="text/css" href="/api/style/global.css" />
     </head>
     <body>
         <main id="__login">
-            <form action="/auth?callback_url=<%= callback_url %>" method="post">
+            <form action="/api/login?callback_url=<%= callback_url %>" method="get">
                 <h1><%= message %></h1>
                 <label>
                     <input name="email" type="email" placeholder="Email" required />
