--- a/service/views/404.ejs
+++ b/service/views/404.ejs
@@ -9,13 +9,13 @@
             rel="preload"
             as="font"
             type="font/woff2"
-            href="/font/BDO-Grotesk/BDOGrotesk-VF.woff2"
+            href="/static/font/BDO-Grotesk/BDOGrotesk-VF.woff2"
             crossOrigin=""
         />
-        <link rel="stylesheet" type="text/css" href="/style/global.css" />
+        <link rel="stylesheet" type="text/css" href="/static/style/global.css" />
         <title>404</title>
     </head>
     <body>
-        <h1>404</h1>
+        <div class="page_404">404</div>
     </body>
 </html>
