--- a/service/views/login.ejs
+++ b/service/views/login.ejs
@@ -5,15 +5,17 @@
         <meta charset="utf-8" />
         <meta name="robots" content="nofollow" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Login Form</title>
         <link
             rel="preload"
             as="font"
             type="font/woff2"
-            href="/api/font/BDO-Grotesk/BDOGrotesk-VF.woff2"
+            href="/static/font/BDO-Grotesk/BDOGrotesk-VF.woff2"
             crossOrigin=""
         />
-        <link rel="stylesheet" type="text/css" href="/api/style/global.css" />
+        <script type="text/javascript" src="/static/script/theme.js"></script>
+        <link rel="stylesheet" type="text/css" href="/static/style/global.css" />
+        <link rel="stylesheet" type="text/css" href="/static/style/login.css" />
+        <title>Login Form</title>
     </head>
     <body>
         <main id="__login">
