--- a/console/styles/menu.module.scss
+++ b/console/styles/menu.module.scss
@@ -1,37 +1,32 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: baseline;
-    // width: 100%;
+    align-items: flex-start;
+    width: 100%;
 
     list-style: none;
-    padding: 0 0 0 2px;
+    padding: 0;
     margin: 0;
+    overflow: hidden;
 
-    // transform: scale(var(--tree-scale));
-    // transform-origin: top left;
+    ul {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
 
-    // transition: transform 300ms ease;
-
-    &[data-grid="true"] {
-        border-left: 1px solid;
-        .menu_list {
-            margin-left: -2px;
+        &::-webkit-scrollbar {
+            display: none;
         }
     }
 }
 
 .list {
     font-size: 1em;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     align-items: baseline;
-    max-width: calc(100% + 2px);
     overflow: hidden;
-    filter: drop-shadow(0 0 0.1em var(--accents-12));
 
-    margin-bottom: 2px;
-    // margin-left: -1px;
+    margin-block: 0.15em;
 
     a,
     button,
@@ -39,10 +34,8 @@
         cursor: pointer;
         background: none;
         font: inherit;
-        border-radius: 0.2em;
+        border-radius: calc(var(--grid-gap) / 2);
         border: none;
-        // border: 1px solid;
-        overflow: hidden;
 
         background-color: var(--accents-12);
         color: var(--accents-1);
@@ -51,9 +44,6 @@
         text-transform: capitalize;
 
         margin: 0;
-        // margin-bottom: 1px;
-        // margin-left: -1px;
-
         padding: 0;
         padding-inline: 0.5em;
 
@@ -61,6 +51,8 @@
 
         display: inline-flex;
         align-items: center;
+
+        position: relative;
 
         > select {
             padding-inline: 0 1.5em;
