--- a/console/styles/menu.module.scss
+++ b/console/styles/menu.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    gap: 0.25em;
     width: 100%;
 
     list-style: none;
@@ -9,13 +10,11 @@
     margin: 0;
     overflow: hidden;
 
-    ul {
-        -ms-overflow-style: none; /* IE and Edge */
-        scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 
-        &::-webkit-scrollbar {
-            display: none;
-        }
+    &::-webkit-scrollbar {
+        display: none;
     }
 }
 
@@ -24,7 +23,6 @@
     display: inline-flex;
     flex-direction: column;
     align-items: baseline;
-    overflow: hidden;
 
     a,
     button,
