`feat` Semantic react properties

--- a/console/styles/uc-select.module.scss
+++ b/console/styles/uc-select.module.scss
@@ -3,7 +3,6 @@
 
     display: inline-flex;
     align-items: center;
-    overflow: hidden;
 
     color: inherit;
     background-color: inherit;
@@ -22,27 +21,29 @@
 
     border: none;
     border-radius: inherit;
-    padding: 0 1.5em 0 0.75em;
+    padding-left: 0.5em;
+    padding-right: 2em;
+
+    height: 100%;
+    width: 100%;
 
     color: inherit;
     background-color: inherit;
 }
 
 .suffix {
-    // display: inline-flex;
-    // align-items: center;
-    // justify-content: center;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 
     position: absolute;
-    pointer-events: none;
-    // top: 0;
     right: 0;
-    // bottom: 0;
-    // height: 100%;
+    height: 100%;
     aspect-ratio: 1/1;
-    border-radius: 100%;
     color: inherit;
-    padding-right: 0.1em;
+    background-color: transparent;
+
+    pointer-events: none;
 
     > svg {
         fill: currentColor;
