--- a/service/public/style/global.css
+++ b/service/public/style/global.css
@@ -118,3 +118,17 @@ body {
     font-size: 10em;
     font-weight: bold;
 }
+
+.page_429 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    font-weight: bold;
+    font-size: 2em;
+}
