`feat` Add `favicon.ico`

--- a/service/views/404.ejs
+++ b/service/views/404.ejs
@@ -12,6 +12,7 @@
             href="/static/font/BDO-Grotesk/BDOGrotesk-VF.woff2"
             crossOrigin=""
         />
+        <link rel="icon" type="image/x-icon" href="/static/images/icons/favicon.ico" />
         <link rel="stylesheet" type="text/css" href="/static/style/global.css" />
         <title>404</title>
     </head>
