--- a/service/views/login.ejs
+++ b/service/views/login.ejs
@@ -12,6 +12,7 @@
             href="/static/font/BDO-Grotesk/BDOGrotesk-VF.woff2"
             crossOrigin=""
         />
+        <link rel="icon" type="image/x-icon" href="/static/images/icons/favicon.ico" />
         <script type="text/javascript" src="/static/script/theme.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/style/global.css" />
         <link rel="stylesheet" type="text/css" href="/static/style/login.css" />
