--- a/console/styles/menu.module.scss
+++ b/console/styles/menu.module.scss
@@ -1,4 +1,5 @@
 .container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -8,7 +9,8 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    overflow-x: visible !important;
+    // overflow-y: hidden;
 
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
@@ -19,21 +21,49 @@
 }
 
 .list {
+    position: relative;
     font-size: 1em;
     display: inline-flex;
     flex-direction: column;
-    align-items: baseline;
+    align-items: flex-start;
+    flex-shrink: 0;
+
+    height: 2em;
+    // width: 100%;
+
+    // background-color: red !important;
+
+    border-radius: calc(var(--grid-gap) / 2);
+
+    &[data-role="parent"] {
+        position: sticky;
+        top: 0;
+        z-index: 10;
+    }
+    &[data-role="child"] {
+        padding: 0 0 0 calc(var(--grid-gap) * 2);
+    }
+    &[data-expand="true"] {
+        a,
+        button {
+            background-color: var(--accents-12);
+        }
+    }
+
+    > * {
+        height: 100%;
+        border-radius: inherit;
+    }
 
     a,
-    button,
-    select {
+    button {
         cursor: pointer;
         background: none;
         font: inherit;
-        border-radius: calc(var(--grid-gap) / 2);
         border: none;
+        border-radius: inherit;
 
-        background-color: var(--accents-12);
+        background-color: var(--accents-4);
         color: var(--accents-1);
 
         text-decoration: none;
@@ -43,20 +73,50 @@
         padding: 0;
         padding-inline: 0.5em;
 
-        height: var(--tree-height);
+        height: 100%;
 
         display: inline-flex;
         align-items: center;
 
         position: relative;
 
-        > select {
-            padding-inline: 0 1.5em;
-            width: 100%;
-            outline: none;
+        width: 100%;
+        max-width: 8em;
+
+        &:hover,
+        &[data-active="true"] {
+            background-color: var(--accents-12);
+
+            &[data-ellipsis] {
+                max-width: 16em;
+
+                &::after {
+                    content: attr(data-ellipsis);
+                    z-index: 10;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    bottom: 0;
+
+                    display: inline-flex;
+                    align-items: center;
+
+                    background-color: inherit;
+                    color: inherit;
+
+                    border-radius: inherit;
+                    padding: inherit;
+
+                    white-space: nowrap;
+                }
+            }
         }
+
         > span {
-            border: none;
+            display: block;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
 }
