--- a/console/styles/menu.module.scss
+++ b/console/styles/menu.module.scss
@@ -1,58 +1,66 @@
 .container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.25em;
-    width: 100%;
-
     list-style: none;
     padding: 0;
     margin: 0;
-    overflow-x: visible !important;
-    // overflow-y: hidden;
+
+    position: relative;
+
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    border-left: 1px dashed;
+    border-top-left-radius: 0.25em;
+    border-bottom-left-radius: 0.25em;
+
+    // overflow-x: visible;
 
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
-
     &::-webkit-scrollbar {
         display: none;
+    }
+
+    border-color: var(--accents-6) !important;
+    * {
+        border-color: var(--accents-6) !important;
     }
 }
 
 .list {
     position: relative;
     font-size: 1em;
-    display: inline-flex;
-    flex-direction: column;
-    align-items: flex-start;
+    display: flex;
+    align-items: center;
     flex-shrink: 0;
 
-    height: 2em;
-    // width: 100%;
-
-    // background-color: red !important;
-
-    border-radius: calc(var(--grid-gap) / 2);
+    box-sizing: content-box;
 
     &[data-role="parent"] {
         position: sticky;
-        top: 0;
-        z-index: 10;
-    }
-    &[data-role="child"] {
-        padding: 0 0 0 calc(var(--grid-gap) * 2);
-    }
-    &[data-expand="true"] {
-        a,
-        button {
-            background-color: var(--accents-12);
+        top: 0px;
+        z-index: 100;
+
+        &[data-expand="true"] {
+            > a,
+            button {
+                background-color: var(--accents-4);
+                color: var(--accents-12);
+            }
         }
     }
 
-    > * {
-        height: 100%;
-        border-radius: inherit;
+    &[data-role="child"] {
+        padding-left: calc(var(--grid-gap) * 2);
+        background-color: var(--accents-2);
+        border-bottom: 1px dashed;
+        margin-bottom: -1px;
+
+        border-right: 1px dashed;
+        margin-right: -1px;
+        border-top-right-radius: 0.25em;
+        border-bottom-right-radius: 0.25em;
+        border-bottom-left-radius: 0.25em;
     }
 
     a,
@@ -60,35 +68,52 @@
         cursor: pointer;
         background: none;
         font: inherit;
-        border: none;
-        border-radius: inherit;
+        border: 1px solid;
+        border-radius: 0.25em;
 
-        background-color: var(--accents-4);
-        color: var(--accents-1);
+        // background-color: var(--accents-1);
+        background-color: inherit;
+        color: var(--accents-8);
 
         text-decoration: none;
         text-transform: capitalize;
 
-        margin: 0;
         padding: 0;
-        padding-inline: 0.5em;
+        padding-inline: calc(var(--grid-gap) * 2) var(--grid-gap);
+        margin: 0 -1px -1px -1px;
 
-        height: 100%;
+        height: 2.25em;
 
         display: inline-flex;
         align-items: center;
 
         position: relative;
 
-        width: 100%;
-        max-width: 8em;
+        max-width: 6em;
+        min-width: 2em;
+        overflow: hidden;
+
+        // &::before {
+        //     content: "";
+        //     position: absolute;
+        //     top: 0;
+        //     left: 0;
+        //     bottom: 0;
+        //     width: calc(var(--grid-gap) * 1.25);
+        //     background-color: var(--accents-2);
+        //     border-right: 1px dashed var(--accents-4);
+        //     border-top-right-radius: 0.25em;
+        //     border-bottom-right-radius: 0.25em;
+        //     z-index: 100;
+        // }
 
         &:hover,
         &[data-active="true"] {
-            background-color: var(--accents-12);
+            background-color: var(--accents-4);
+            color: var(--accents-12);
 
             &[data-ellipsis] {
-                max-width: 16em;
+                max-width: 14em;
 
                 &::after {
                     content: attr(data-ellipsis);
